--- a/styles.css
+++ b/styles.css
@@ -9,3 +9,21 @@ h3 {
 p {
   font-size: 18px;
 }
+
+.btn {
+  background-color: #f19592;
+  border: none;
+  color: #a44846;
+  font-size: 16px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  cursor: pointer;
+}
+
+/* Style the active class, and buttons on mouse-over */
+.btn:hover {
+  background-color: #d1d1d1;
+  color: #000000;
+}
+
