--- a/timeline.css
+++ b/timeline.css
@@ -185,6 +185,7 @@ body {
 
 /* ================ Timeline Media Queries ================ */
 
+/*
 @media screen and (max-width: 660px) {
 
 .timeline {
@@ -287,3 +288,4 @@ body {
 	margin: 1em 4em 0 4em;
 }
 }
+*/
