--- a/timeline.css
+++ b/timeline.css
@@ -185,24 +185,27 @@ body {
 
 /* ================ Timeline Media Queries ================ */
 
-/*
+
 @media screen and (max-width: 660px) {
 
 .timeline {
  	width: 100%;
-	padding: 4em 0 1em 0;
+	padding: 3em 0 1em 0;
 }
+
 
 .timeline li {
-	padding: 2em 0;
+	padding: 3em 0;
 }
 
-.direction-l,
-.direction-r {
+.direction-r,
+.direction-l {
 	float: none;
 	width: 100%;
+	left: 0;
 
 	text-align: center;
+	z-index: 15;
 }
 
 .flag-wrapper {
@@ -210,20 +213,20 @@ body {
 }
 
 .flag {
-	background: rgb(255,255,255);
+	background: rgb(248,248,248);
 	z-index: 15;
 }
 
 .direction-l .flag:before,
 .direction-r .flag:before {
   position: absolute;
-  top: -30px;
+  top: -12px;
 	left: 50%;
 	content: ' ';
 	display: block;
 	width: 12px;
 	height: 12px;
-	margin-left: -9px;
+	margin-left: -6px;
 	background: #fff;
 	border-radius: 10px;
 	border: 4px solid #eb6864;
@@ -240,7 +243,7 @@ body {
 	width: 0;
 	margin-left: -8px;
 	border: solid transparent;
-	border-bottom-color: rgb(255,255,255);
+	border-bottom-color: rgb(248,248,248);
 	border-width: 8px;
 	pointer-events: none;
 }
@@ -248,22 +251,17 @@ body {
 .time-wrapper {
 	display: block;
 	position: relative;
-	margin: 4px 0 0 0;
+	margin: 1px 0 -0.77em 0;
 	z-index: 14;
 }
 
-.direction-l .time-wrapper {
-	float: none;
-}
-
+.direction-l .time-wrapper,
 .direction-r .time-wrapper {
 	float: none;
 }
 
 .desc {
 	position: relative;
-	margin: 1em 0 0 0;
-	padding: 1em;
 	background: rgb(245,245,245);
 	-webkit-box-shadow: 0 0 1px rgba(0,0,0,0.20);
 	-moz-box-shadow: 0 0 1px rgba(0,0,0,0.20);
@@ -275,13 +273,14 @@ body {
 .direction-l .desc,
 .direction-r .desc {
 	position: relative;
-	margin: 1em 1em 0 1em;
-	padding: 1em;
+	margin: -0.25em 1em 0 1em;
+	padding: 0.5em;
 	
   z-index: 15;
 }
 }
 
+/*
 @media screen and (min-width: 400px) and  (max-width: 660px) {
 .direction-l .desc,
 .direction-r .desc {
