--- a/timeline.css
+++ b/timeline.css
@@ -172,7 +172,7 @@ body {
 .desc {
   margin: 1em 0.75em 0 0;
   
-  /* font-size: 0.77777em; */
+  font-size: 1.05em;
   font-style: italic;
   line-height: 1.5em;
 }
