--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -2,4 +2,12 @@
 
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
 
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/icon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/assets/icon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/assets/icon/favicon-16x16.png">
+<link rel="manifest" href="/assets/icon/site.webmanifest">
+<link rel="mask-icon" href="/assets/icon/safari-pinned-tab.svg" color="#1d4f91">
+<meta name="msapplication-TileColor" content="#1d4f91">
+<meta name="theme-color" content="#ffffff">
+
 <!-- end custom head snippets -->
