--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -8,6 +8,6 @@
 <link rel="manifest" href="/assets/icon/site.webmanifest">
 <link rel="mask-icon" href="/assets/icon/safari-pinned-tab.svg" color="#1d4f91">
 <meta name="msapplication-TileColor" content="#1d4f91">
-<meta name="theme-color" content="#ffffff">
+<meta name="theme-color" content="#252a34">
 
 <!-- end custom head snippets -->
